<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  ~ Copyright (C) 2016 The Android Open Source Project
  ~ Copyright (C) 2020 Timothy "ZeevoX" Langer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="about_action_alpha">Test alpha builds</string>
    <string name="about_action_email">Send an email</string>
    <string name="about_action_email_error">There are no email clients installed.</string>
    <string name="about_action_email_text">Hello there,    I\'d like to…</string>
    <string name="about_action_email_title">Ocquarium question</string>
    <string name="about_action_g_play">Write a review</string>
    <string name="about_action_github">View source code</string>
    <string name="about_action_share">Share</string>
    <string name="about_author_name" translatable="false">ZeevoX</string>
    <string name="about_desc_app_icon">Ocquarium application icon</string>
    <string name="about_text_author">Author</string>

    <string name="action_apply">Apply</string>
    <string name="action_ok" translatable="false">@android:string/ok</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_settings">Settings</string>

    <string name="anim_even_longer" translatable="false">5000</string>
    <string name="anim_long" translatable="false">2000</string>
    <string name="anim_medium" translatable="false">1000</string>
    <string name="anim_no_duration" translatable="false">0</string>
    <string name="anim_short" translatable="false">500</string>

    <string name="app_name" translatable="false">Ocquarium</string>

    <string name="dialog_pie_info_message">Android Pie is now available! You can get the Android P easter egg on your device too!</string>
    <string name="dialog_pie_info_neutral">Maybe later</string>
    <string name="dialog_pie_info_positive">Download</string>
    <string name="dialog_pie_info_positive_long">Download on Google Play</string>
    <string name="dialog_pie_info_title">Android Pie 9 released!</string>
    <string name="dialog_pie_info_url" translatable="false">https://play.google.com/store/apps/details?id=com.zeevox.pie</string>

    <string name="feedback_check_device_info">I agree that by pressing the \"Send feedback\" button, Ocquarium will collect some non-identifiable device information such as device name and Android version</string>
    <string name="feedback_check_latest_version">I have verified that I am using the latest version of Ocquarium</string>
    <string name="feedback_describe_issue">Describe the issue</string>
    <string name="feedback_dialog_email_app_error">No email application found on your device. Please install a supported email app and try again.</string>
    <string name="feedback_dialog_fields_error">Please make sure you have filled in all the input fields.</string>
    <string name="feedback_dialog_invalid_checkboxes">Please make sure you have checked all the boxes.</string>
    <string name="feedback_dialog_title_error">Error</string>
    <string name="feedback_error_empty">Please make sure you have not forgotten this field.</string>
    <string name="feedback_hint_issue_title">Issue title</string>
    <string name="feedback_prefill_content" translatable="false">
        ISSUE_DESCRIPTION\n\n
        #### Device info\n\n
         - Ocquarium build version: `ocquarium_version_name`\n
         - Device fingerprint: `device_fingerprint`\n\n\n\n
    </string>

    <string name="live_wall_author" translatable="false">Timothy Langer &amp; the AOSP</string>
    <string name="live_wall_description">Watch as a playful octopus floats behind your home screen.</string>
    <string name="live_wall_name">Ocquarium live wallpaper</string>

    <string name="pref_header_background">Background</string>
    <string name="pref_header_background_desc">Change the color of the background</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_general_desc">Change miscellaneous options</string>

    <string name="prefs_category_about">About</string>
    <string name="prefs_category_about_desc">Get more info or send feedback.</string>
    <string name="prefs_category_animations">Animations</string>
    <string name="prefs_category_experimental">Experimental</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_live_wallpaper">Live wallpaper</string>
    <string name="prefs_category_octopus">Octopus</string>
    <string name="prefs_category_octopus_desc">Change how the octopus looks</string>
    <string name="prefs_category_screensaver">Screensaver</string>
    <string name="prefs_category_ss_and_wallpaper">Screensaver and wallpaper</string>
    <string name="prefs_category_ss_and_wallpaper_desc">Let the octopus calmly drift past your home screen.</string>
    <string-array name="prefs_fade_duration_entries">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
        <item>Even longer</item>
        <item>No animation</item>
    </string-array>
    <string-array name="prefs_fade_duration_values">
        <item>@string/anim_short</item>
        <item>@string/anim_medium</item>
        <item>@string/anim_long</item>
        <item>@string/anim_even_longer</item>
        <item>@string/anim_no_duration</item>
    </string-array>
    <string name="prefs_gradient_end_color_summary">Set the background gradient end color.</string>
    <string name="prefs_gradient_end_color_title">Gradient end color</string>
    <string name="prefs_gradient_start_color_summary">Set the background gradient start color.</string>
    <string name="prefs_gradient_start_color_title">Gradient start color</string>
    <string name="prefs_hide_settings_summary">Don\'t show an icon but still allow tapping in the top left corner to access settings.</string>
    <string name="prefs_hide_settings_title">Transparent settings icon</string>
    <string name="prefs_mixin_animation_lag_info">Removing the animation prevents lag when opening the app.</string>
    <string name="prefs_octo_fade_in_duration_title">Fade in animation duration</string>
    <string name="prefs_octopus_advanced_summary">Configure experimental options</string>
    <string name="prefs_octopus_advanced_title">Advanced</string>
    <string name="prefs_octopus_average_size_notice">Moving the octopus by touching and dragging is currently not available on this screen.</string>
    <string name="prefs_octopus_average_size_summary">Change the size of the octopus</string>
    <string name="prefs_octopus_average_size_title">Octopus average size</string>
    <string name="prefs_octopus_blink_frequency_summary">Change how often the octopus blinks. Default is 10, maximum is 500.</string>
    <string name="prefs_octopus_blink_frequency_title">Blink frequency</string>
    <string name="prefs_octopus_leg_particles_summary">Make the tentacles out of small floating particles.</string>
    <string name="prefs_octopus_leg_particles_title">Enable particle legs</string>
    <string name="prefs_octopus_leg_path_debug_summary">Give the tentacles a geometric makeover.</string>
    <string name="prefs_octopus_leg_path_debug_title">Enable experimental legs</string>
    <string name="prefs_octopus_weird_eyes_summary">Make the eyes open and closed at the same time.</string>
    <string name="prefs_octopus_weird_eyes_title">Enable experimental eyes</string>
    <string name="prefs_open_ocquarium_alpha">Open Ocquarium Alpha</string>
    <string name="prefs_platlogo_v2_summary">Show the new Android Oreo logo instead of the previous one.</string>
    <string name="prefs_platlogo_v2_title">New platform logo</string>
    <string name="prefs_reset_colors_summary">Reset the background colors to the default Oreo blues.</string>
    <string name="prefs_reset_colors_title">Reset colors</string>
    <string name="prefs_reset_live_wallpaper_summary">Use this option to force restart the live wallpaper.</string>
    <string name="prefs_reset_live_wallpaper_title">Restart wallpaper</string>
    <string name="prefs_restarting_wallpaper">Restarting live wallpaper…</string>
    <string name="prefs_screensaver_enable_touch_summary">Allow moving the octopus by touch during screensaver mode</string>
    <string name="prefs_screensaver_enable_touch_title">Enable touch</string>
    <string name="prefs_screensaver_error">Your device doesn\'t support setting a screensaver, sorry.</string>
    <string name="prefs_set_live_wall_summary">Click me to set Ocquarium as your live wallpaper.</string>
    <string name="prefs_set_live_wall_title">Set live wallpaper</string>
    <string name="prefs_set_screensaver_summary">Click me to set Ocquarium as your device\'s screensaver.</string>
    <string name="prefs_set_screensaver_title">Set screensaver</string>
    <string name="prefs_show_navigation_bar_summary">Display the navigation bar while playing Ocquarium</string>
    <string name="prefs_show_navigation_bar_title">Show system navbar</string>
    <string name="prefs_show_platlogo_summary">Display the Android Oreo logo before the octopus.</string>
    <string name="prefs_show_platlogo_title">Show platform logo</string>
    <string name="prefs_uigradients_dialog_description">Apply gradient called %s?\n\nIf you would like to try a different gradient, press cancel and select \"Random gradient\" again.</string>
    <string name="prefs_uigradients_dialog_title">Random gradient</string>
    <string name="prefs_uigradients_summary">Random gradient</string>
    <string name="prefs_uigradients_title">Pick a random set of colors from uigradients.com</string>
    <string name="prefs_wallpaper_disabled_desc">Ocquarium live wallpaper already set.</string>

    <string name="share_text">Check out %s https://play.google.com/store/apps/details?id=com.zeevox.octo</string>
    <string name="share_with">Share \"%s\" with</string>

    <string name="shortcut_settings_disabled">This application shortcut has been disabled.</string>
    <string name="shortcut_settings_long">Change Ocquarium preferences</string>
</resources>
