<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="category_general"
    android:title="@string/prefs_category_general">

    <SwitchPreference
        android:defaultValue="false"
        android:key="transparent_settings_icon"
        android:summary="@string/prefs_hide_settings_summary"
        android:title="@string/prefs_hide_settings_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="show_platlogo"
        android:summary="@string/prefs_show_platlogo_summary"
        android:title="@string/prefs_show_platlogo_title" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="platlogo_v2"
        android:summary="@string/prefs_platlogo_v2_summary"
        android:title="@string/prefs_platlogo_v2_title" />

    <PreferenceCategory android:title="@string/prefs_category_animations">
        <ListPreference
            android:defaultValue="@string/anim_short"
            android:entries="@array/prefs_fade_duration_entries"
            android:entryValues="@array/prefs_fade_duration_values"
            android:key="octo_fade_in_duration"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:selectable="true"
            android:summary="%s"
            android:title="@string/prefs_octo_fade_in_duration_title" />
        <Preference
            android:icon="@drawable/ic_info_outline_24dp"
            android:selectable="false"
            android:summary="Removing the animation prevents lag when opening the app." />
    </PreferenceCategory>
</PreferenceScreen>
